python/rregadmin/util/ustring_wrapper.py

ustr_vprintf.restype = gboolean
# ustr_vprintf(in_ustr, fmt, args)
ustr_vprintf.argtypes = [POINTER(ustring), STRING, POINTER(__va_list_tag)]
ustr_vprintf.__doc__ = \
"""gboolean ustr_vprintf(ustring * in_ustr, unknown * fmt, __va_list_tag * args)
../../../rregadmin/util/ustring.h:319"""
# ../../../rregadmin/util/ustring.h 325
ustr_vprintfa = _libraries['librregadmin.so.1'].ustr_vprintfa
ustr_vprintfa.restype = gboolean
# ustr_vprintfa(in_ustr, fmt, args)
ustr_vprintfa.argtypes = [POINTER(ustring), STRING, POINTER(__va_list_tag)]
ustr_vprintfa.__doc__ = \
"""gboolean ustr_vprintfa(ustring * in_ustr, unknown * fmt, __va_list_tag * args)
../../../rregadmin/util/ustring.h:325"""
# ../../../rregadmin/util/ustring.h 335
ustr_hexdump = _libraries['librregadmin.so.1'].ustr_hexdump
ustr_hexdump.restype = gboolean
# ustr_hexdump(in_ustr, buffer, start, stop, ascii, in_include_colon)
ustr_hexdump.argtypes = [POINTER(ustring), POINTER(guint8), c_int, c_int, gboolean, gboolean]
ustr_hexdump.__doc__ = \
"""gboolean ustr_hexdump(ustring * in_ustr, unknown * buffer, int start, int stop, gboolean ascii, gboolean in_include_colon)
../../../rregadmin/util/ustring.h:335"""
# ../../../rregadmin/util/ustring.h 344
ustr_hexdumpa = _libraries['librregadmin.so.1'].ustr_hexdumpa
ustr_hexdumpa.restype = gboolean
# ustr_hexdumpa(in_ustr, buffer, start, stop, ascii, in_include_colon)
ustr_hexdumpa.argtypes = [POINTER(ustring), POINTER(guint8), c_int, c_int, gboolean, gboolean]
ustr_hexdumpa.__doc__ = \
"""gboolean ustr_hexdumpa(ustring * in_ustr, unknown * buffer, int start, int stop, gboolean ascii, gboolean in_include_colon)
../../../rregadmin/util/ustring.h:344"""
# ../../../rregadmin/util/ustring.h 352
ustr_hexstream = _libraries['librregadmin.so.1'].ustr_hexstream
ustr_hexstream.restype = gboolean
# ustr_hexstream(in_ustr, buffer, start, stop, in_sep)
ustr_hexstream.argtypes = [POINTER(ustring), POINTER(guint8), c_int, c_int, c_char]
ustr_hexstream.__doc__ = \
"""gboolean ustr_hexstream(ustring * in_ustr, unknown * buffer, int start, int stop, char in_sep)
../../../rregadmin/util/ustring.h:352"""
# ../../../rregadmin/util/ustring.h 360
ustr_hexstreama = _libraries['librregadmin.so.1'].ustr_hexstreama
ustr_hexstreama.restype = gboolean
# ustr_hexstreama(in_ustr, buffer, start, stop, in_sep)
ustr_hexstreama.argtypes = [POINTER(ustring), POINTER(guint8), c_int, c_int, c_char]
ustr_hexstreama.__doc__ = \
"""gboolean ustr_hexstreama(ustring * in_ustr, unknown * buffer, int start, int stop, char in_sep)
../../../rregadmin/util/ustring.h:360"""
# ../../../rregadmin/util/ustring.h 367
ustr_strnset_type = _libraries['librregadmin.so.1'].ustr_strnset_type
ustr_strnset_type.restype = gboolean
# ustr_strnset_type(in_ustr, type, buffer, buffer_len)
ustr_strnset_type.argtypes = [POINTER(ustring), UStringType, STRING, c_int]
ustr_strnset_type.__doc__ = \
"""gboolean ustr_strnset_type(ustring * in_ustr, UStringType type, unknown * buffer, int buffer_len)
../../../rregadmin/util/ustring.h:367"""
# ../../../rregadmin/util/ustring.h 375
ustr_strset = _libraries['librregadmin.so.1'].ustr_strset
ustr_strset.restype = gboolean
# ustr_strset(in_ustr, s)
ustr_strset.argtypes = [POINTER(ustring), STRING]
ustr_strset.__doc__ = \
"""gboolean ustr_strset(ustring * in_ustr, unknown * s)
../../../rregadmin/util/ustring.h:375"""
# ../../../rregadmin/util/ustring.h 381
ustr_strnset = _libraries['librregadmin.so.1'].ustr_strnset
ustr_strnset.restype = gboolean
# ustr_strnset(in_ustr, s, n)
ustr_strnset.argtypes = [POINTER(ustring), STRING, c_int]
ustr_strnset.__doc__ = \
"""gboolean ustr_strnset(ustring * in_ustr, unknown * s, int n)
../../../rregadmin/util/ustring.h:381"""
# ../../../rregadmin/util/ustring.h 387
ustr_strcat = _libraries['librregadmin.so.1'].ustr_strcat
ustr_strcat.restype = gboolean
# ustr_strcat(in_ustr, str)
ustr_strcat.argtypes = [POINTER(ustring), STRING]
ustr_strcat.__doc__ = \
"""gboolean ustr_strcat(ustring * in_ustr, unknown * str)
../../../rregadmin/util/ustring.h:387"""
# ../../../rregadmin/util/ustring.h 393
ustr_strncat = _libraries['librregadmin.so.1'].ustr_strncat
ustr_strncat.restype = gboolean
# ustr_strncat(in_ustr, str, len)
ustr_strncat.argtypes = [POINTER(ustring), STRING, c_int]
ustr_strncat.__doc__ = \
"""gboolean ustr_strncat(ustring * in_ustr, unknown * str, int len)
../../../rregadmin/util/ustring.h:393"""
# ../../../rregadmin/util/ustring.h 399
ustr_charcat = _libraries['librregadmin.so.1'].ustr_charcat
ustr_charcat.restype = gboolean
# ustr_charcat(in_ustr, ch)
ustr_charcat.argtypes = [POINTER(ustring), c_int]
ustr_charcat.__doc__ = \
"""gboolean ustr_charcat(ustring * in_ustr, int ch)
../../../rregadmin/util/ustring.h:399"""
# ../../../rregadmin/util/ustring.h 405
ustr_strnprepend = _libraries['librregadmin.so.1'].ustr_strnprepend
ustr_strnprepend.restype = gboolean
# ustr_strnprepend(in_ustr, str, len)
ustr_strnprepend.argtypes = [POINTER(ustring), STRING, c_int]
ustr_strnprepend.__doc__ = \
"""gboolean ustr_strnprepend(ustring * in_ustr, unknown * str, int len)
../../../rregadmin/util/ustring.h:405"""
# ../../../rregadmin/util/ustring.h 407
ustr_debug_print = _libraries['librregadmin.so.1'].ustr_debug_print
ustr_debug_print.restype = None
# ustr_debug_print(in_ustr)
ustr_debug_print.argtypes = [POINTER(ustring)]
ustr_debug_print.__doc__ = \
"""void ustr_debug_print(unknown * in_ustr)
../../../rregadmin/util/ustring.h:407"""
# ../../../rregadmin/util/ustring.h 415
ustr_allocated_count = _libraries['librregadmin.so.1'].ustr_allocated_count
ustr_allocated_count.restype = c_int
# ustr_allocated_count()
ustr_allocated_count.argtypes = []
ustr_allocated_count.__doc__ = \
"""int ustr_allocated_count()
../../../rregadmin/util/ustring.h:415"""
# WARNING: PACKING FAILED: total alignment (8/64)
__va_list_tag._fields_ = [
    # <built-in> 0
]
__all__ = ['USTR_TYPE_ASCII', 'ustr_allocated_count',
           'ustr_trim_ws_back', 'USTR_TYPE_UTF16LE', 'ustr_equal',
           '__va_list_tag', 'ustr_compare', 'ustr_trim_front',
           'USTR_TYPE_UTF8', 'ustr_hexdumpa', 'ustr_printf',
           'ustr_vprintf', 'ustr_hexdump', 'ustr_charcat',
           'USTR_TYPE_NONE', 'ustring_', 'ustr_index',
           'ustr_hexstreama', 'ustr_trim_back', 'ustr_strup',
           'UStringType', 'ustr_clear', 'ustr_encode', 'ustr_strcat',
           'ustr_strnprepend', 'ustr_overwrite', 'ustr_equal_str',
           'ustr_vprintfa', 'ustr_printfa', 'ustr_is_valid',
           'ustr_create_type', 'ustr_debug_print', 'ustr_create',
           'ustr_casecmp', 'ustr_wrap', 'ustr_new',
           'USTR_TYPE_ISO8859_1', 'ustr_trim_ws_front',
           'ustr_hexstream', 'ustr_strlen', 'ustr_strdown',
           'ustr_strncat', 'ustr_trim_ws', 'ustr_copy', 'ustr_free',
           'ustr_last_char', 'ustr_size', 'ustr_strnset', 'ustring',
           'ustr_strnset_type', 'ustr_casecmp_str', 'ustr_strset',
           'ustr_wrapa', 'ustr_compare_str', 'ustr_index_unsafe',
           'ustr_regcmp', 'ustr_as_utf8', 'ustr_generic_encode']
